# webview-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
plugin/: CMakeLists.txt
plugin/include/Juce8WebViewPlugin/: PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
plugin/ui/public/: index.html
plugin/ui/public/css/: app.css
plugin/ui/public/js/: app.js
